public/styles.css
:root {
  --lrPadding: 24px;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

body {
  height: 100vh;

  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.header {
  color: #fff;
  background: #090641;

  padding: 8px var(--lrPadding);
  display: flex;
  justify-content: space-between;
}

.header .nav {
  margin: auto 0;
}

.heading__logo {
  background-color: #b8b6b7;
  border-radius: 50px;
  padding: 12px;
}
.header .nav ul {
  text-decoration: none;
  display: flex;
  list-style: none;
  gap: 14px;
}

.nav ul li a {
  color: #fff;
  text-decoration: none;
}

.nav ul li a:hover,
.nav ul li:hover {
  color: #d4d2d2;
  text-decoration: underline;
  text-underline-offset: 3px;

  transform: translateY(-4px) scale(1.03);
}
@media (max-width: 330px) {
  .heading__logo {
    display: block;
    margin: 0 auto;
  }

  .nav {
    display: none;
  }
}

/* end header */

/* MAIN */
/* main header */
.container {
}

.main-header {
  background: #090641;
  color: #fff;
  height: 60vh;

  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 18px;
  flex-wrap: wrap;
  padding: 18px;
}

@media (max-width: 630px) {
  .main-header {
    height: auto;
  }
}

.left-header {
}

.right-header {
  border: 2px solid #fff;
  height: 200px;
  width: 250px;

  display: flex;
  align-items: center;
  justify-content: center;
}

/* END MAIN HEADER */

/* FEATURES */
.projects {
  padding: 30px var(--lrPadding);

  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  gap: 24px;
  flex-direction: column;
}

.project--header h2 {
  text-transform: uppercase;
}

.cards--container {
  display: flex;
  width: 100%;
  justify-content: center;
  gap: 43px;
}

.cards {
  height: 400px;
  width: 200px;
}

.cards .img-holder {
  margin-bottom: 12px;
  height: 200px;
  border: 2px solid #000;
  border-radius: 8px;
}

/* PROJECT-PURPOSES section */
.project-purposes {
  padding: 0 120px;
  margin: 0 0 48px;
}

.project-purposes > div {
  margin-bottom: 14px;
}

.project-purposes div h2 {
  text-align: center;
  margin-bottom: 24px;
}

.project-purposes > div h3 {
  text-transform: uppercase;
  margin: 12px 0;
}

.project-purposes .ppurpose__img-holder {
  height: 240px;
  border: 2px solid turquoise;
  border-radius: 12px;
  margin-bottom: 12px;
}
/* END of PROJECT-PURPOSES */

/* cONTACT ME */

.contact-me {
  padding: 40px;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #090641;
  color: #fefefe;

  margin: 120px;
  border-radius: 22px;
}

.contact-me h2 {
  margin-bottom: 24px;
  text-transform: uppercase;
}

.contact-me form label {
  display: block;
  margin: 6px 0;
}

.contact-me form input:focus {
  transform: scaleX(1.04);
  transform-origin: left;
}

@media screen and (max-width: 420px) {
  .project-purposes {
    padding: 12px;
    display: flex;
    width: 100vw;
    justify-content: center;
    flex-direction: column;
  }

  .contact-me {
    display: block;
    width: 100vw;
  }
}

/* footer */

.footer {
  padding: 12px;
  background: #b8b6b7;
  display: flex;
  justify-content: center;
  column-gap: 24px;
  flex-wrap: wrap;
}

.footer-med {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
}

